# emcli

./: .gitmodules  CMakeLists.txt  ansi.h  argparser.h  cmdproc.h  paralstream.h  singleterm.h  terminal.h  txt
standalone/: CMakeLists.txt  main.cpp  spstream.h
